[gd_scene load_steps=4 format=2]

[ext_resource path="res://elements/ModuleDragger.gd" type="Script" id=1]
[ext_resource path="res://sounds/module/mod_move.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/module/mod_pickup.wav" type="AudioStream" id=3]

[node name="ModuleDragger" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="Move" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -3.0
bus = "ModuleSFX"

[node name="Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 2.0
bus = "ModuleSFX"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
